--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -2,14 +2,44 @@
 
 <h1>Vehicles</h1>
 
-<div id="vehicles">
-  <% @vehicles.each do |vehicle| %>
-    <%= vehicle.id %>
-    <%= vehicle.chassis %>
-    <p>
-      <%= link_to "Show this vehicle", vehicle %>
-    </p>
-  <% end %>
-</div>
+<%= form_with(url: vehicles_path, method: "get", local: true) do |form| %>
+  <div class="input-group mb-3">
+    <%= form.text_field :query, class: "form-control", placeholder: "Search..." %>
+    <button type="submit" class="btn btn-primary">Search</button>
+  </div>
+<% end %>
 
-<%= link_to "New vehicle", new_vehicle_path %>
+<table class="table table-striped table-bordered table-sm">
+  <thead>
+    <tr>
+      <th class="text-center">Chassi</th>
+      <th class="text-center">Modelo</th>
+      <th class="text-center">Local</th>
+      <th class="text-center">Navio</th>
+      <th class="text-center">Situação</th>
+      <th class="text-center">Nº Não Conformidades</th>
+      <th class="text-center">Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @vehicles.each do |vehicle| %>
+      <tr>
+        <td class="text-center"><%= vehicle.chassis %></td>
+        <td class="text-center"><%= vehicle.model %></td>
+        <td class="text-center"><%= vehicle.location %></td>
+        <td class="text-center"><%= vehicle.ship %></td>
+        <td class="text-center"><%= vehicle.situation %></td>
+        <td class="text-center"><%= vehicle.nonconformity %></td>
+        <td class="justify-content-center d-flex">
+          <%= link_to image_tag("see.png", alt: "sair", size: "12x12", class: "img-fluid"), vehicle, class: "btn btn-link px-1" %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<div class="col d-flex">
+  <%== pagy_bootstrap_nav(@pagy) %>
+  <%= label_tag "label", @vehicles.count, class: "h6 ps-2 pt-2" %>
+  <%= label_tag "label", " Itens", class: "h6 ps-1 pt-2" %>
+</div>
