--- a/app/views/shared/_nonconformities_index.html.erb
+++ b/app/views/shared/_nonconformities_index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td class="text-center"><%= NonconformityLocal.find(nonconformity.nonconformityLocals).local %></td>
         <td class="text-center"><%= VehiclePart.find(nonconformity.vehicleParts).name %></td>
-        <td class="text-center"><%= NonconformityType.find(nonconformity.nonconformityTypes).nctype %></td>
+        <td class="text-center"><%= nonconformity.nonconformityTypes == "null" ? '' : NonconformityType.find(nonconformity.nonconformityTypes).nctype %></td>
         <td class="text-center"><%= NonconformityLevel.find(nonconformity.nonconformityLevels).level %></td>
         <td class="text-center"><%= Quadrant.find(nonconformity.quadrants).option %></td>
         <td class="text-center"><%= Measure.find(nonconformity.measures).size %></td>
