--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,16 +1,57 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Vehicles</h1>
+<h1>Veículos</h1>
 
 <%= form_with(url: vehicles_path, method: "get", local: true) do |form| %>
-  <div class="input-group mb-3">
-    <%= form.text_field :query, class: "form-control", placeholder: "Search..." %>
-    <button type="submit" class="btn btn-primary">Search</button>
+  <div class="row d-flex justify-content-center">
+    <div class="col">
+      <div class="row g-3 mt-2">
+        <div class="col-md-3">
+          <%= form.select :ship_and_travel, options_for_select(
+            Vehicle.distinct(:ship).map do |ship| 
+              travels = Vehicle.where(ship: ship).distinct(:travel)
+              travels.map { |travel| ["#{ship} - #{travel}", "#{ship}-#{travel}"] }
+            end.flatten(1), params[:ship_and_travel]
+          ), { prompt: "Selecione um Navio" }, { class: "form-select" } %>
+        </div>
+        <div class="col-md-6">
+          <%= form.text_field :chassis, class: "form-control", placeholder: "Procure por um Chassi" %>
+        </div>
+        <div class="col-md-3">
+          <button type="submit" class="btn btn-primary btn-filter">Filtrar</button>
+          <%= link_to image_tag("pdf.png", alt: "sair", size: "40x40", class: "img-fluid"), vehicles_index_pdf_vehicles_path(ship: @ship, chassis: @chassis, model: @model, situation: @situation, start_date: @start_date, end_date: @end_date), target: "_blank", class: "ps-4" %>
+        </div> 
+      </div>
+      <div class="mt-3">           
+        <a data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" class="advanced">
+          Mais Filtros <i class="fa fa-angle-down"></i>
+        </a>
+        <div class="collapse" id="collapseExample">
+          <div class="row">
+            <div class="col-md-4">
+              <%= form.text_field :model, class: "form-control", placeholder: "Modelo" %>
+            </div>
+            <div class="col-md-4">
+              <%= form.text_field :situation, class: "form-control", placeholder: "Situação" %>
+            </div>
+          </div>
+          <div class="row pt-2">
+            <div class="col-md-4">
+              <%= form.label :start_date, "Data e Hora de Início" %>
+              <%= form.datetime_field :start_date, class: "form-control" %>
+            </div>
+            <div class="col-md-4">
+              <%= form.label :end_date, "Data e Hora de Término" %>
+              <%= form.datetime_field :end_date, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>     
   </div>
 <% end %>
 
-<%= link_to "Generate PDF", vehicles_index_pdf_vehicles_path, class: "btn btn-primary mb-3" %>
-
+<br>
 
 <table class="table table-striped table-bordered table-sm">
   <thead>
