--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -34,6 +34,10 @@
             <div class="col-md-4">
               <%= form.text_field :situation, class: "form-control", placeholder: "Situação" %>
             </div>
+            <div class="col-md-4">
+              <%= form.label :nonconformity, "Não conformidade" %><br>
+              <%= form.check_box :nonconformity, { checked: params[:nonconformity] == "0" }, "0", "" %>
+            </div>
           </div>
           <div class="row pt-2">
             <div class="col-md-4">
