--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<div>
+<div class="h-100 d-flex align-items-center justify-content-center">
     <iframe title="ios_car_inspection" width="1380" height="1070" src="https://app.powerbi.com/reportEmbed?reportId=dc84200d-5b06-4713-9d33-0b0f611db55e&autoAuth=true&ctid=969974c7-ca1a-4ce1-87ac-7a24bbf32ec1" frameborder="0" &filterPaneEnabled=false allowFullScreen="true"></iframe>
 </div>
